RESOLVED FIXED143644
Fix trival typos related to the word "coordinate".
https://bugs.webkit.org/show_bug.cgi?id=143644
Summary Fix trival typos related to the word "coordinate".
Sungmann Cho
Reported 2015-04-12 05:14:48 PDT
Fix some minor typos related to the word "coordinate". 1. cordinate -> coordinate 2. coordinate -> coordinate 3. coodinate - >coordinate
Attachments
Patch (133.28 KB, patch)
2015-04-12 05:23 PDT, Sungmann Cho
no flags
Sungmann Cho
Comment 1 2015-04-12 05:23:22 PDT
WebKit Commit Bot
Comment 2 2015-04-12 15:34:13 PDT
Comment on attachment 250601 [details] Patch Clearing flags on attachment: 250601 Committed r182674: <http://trac.webkit.org/changeset/182674>
WebKit Commit Bot
Comment 3 2015-04-12 15:34:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.