Fix trival typos related to the word "coordinate". https://bugs.webkit.org/show_bug.cgi?id=143644

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2015-04-12
Reviewed by Alexey Proskuryakov.

No new tests, no behavior change.

Source/WebCore:

* rendering/RenderBox.cpp:
(WebCore::RenderBox::layoutOverflowRectForPropagation):

Source/WebKit2:

* Shared/WebHitTestResult.cpp:
(WebKit::WebHitTestResult::Data::encode):
(WebKit::WebHitTestResult::Data::decode):
* Shared/WebHitTestResult.h:
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performActionMenuHitTestAtLocation):
(WebKit::WebPage::lookupTextAtLocation):

LayoutTests:

* css3/scroll-snap/scroll-snap-property-computed-style-expected.txt:
* css3/scroll-snap/scroll-snap-property-computed-style.js:
* platform/gtk/svg/custom/svg-curve-with-relative-cordinates-expected.png: Removed.
* platform/gtk/svg/custom/svg-curve-with-relative-cordinates-expected.txt: Removed.
* platform/ios-sim-deprecated/svg/custom/svg-curve-with-relative-cordinates-expected.txt: Removed.
* platform/ios-simulator/svg/custom/svg-curve-with-relative-cordinates-expected.txt: Removed.
* platform/mac/svg/custom/svg-curve-with-relative-cordinates-expected.png: Removed.
* platform/mac/svg/custom/svg-curve-with-relative-cordinates-expected.txt: Removed.
* platform/win/svg/custom/svg-curve-with-relative-cordinates-expected.txt: Removed.
* svg/custom/svg-curve-with-relative-cordinates.html: Removed.

Canonical link: https://commits.webkit.org/161672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182674 268f45cc-cd09-0410-ab3c-d52691b4dbfc